--- a/program/Cargo.toml
+++ b/program/Cargo.toml
@@ -1,28 +1,39 @@
+[workspace]
 [package]
-name = "my_program_name"
+name = "blob-metadata"
 version = "0.1.0"
-edition = "2021"
+description = "Baby Blob Metadata Extension Program"
 license = "MIT"
-publish = false
+edition = "2021"
+
+[lib]
+crate-type = ["cdylib", "lib"]
+
+
+[features]
+no-entrypoint = []
+no-idl = []
+no-log-ix-name = []
+cpi = ["no-entrypoint"]
+default = []
+
+[profile.release]
+overflow-checks = true
 
 [dependencies]
-solana-program = "=1.10.9"
+solana-program = "=1.9.22"
+mpl-token-metadata = { version = "1.2.7", features = ["no-entrypoint"] }
+anchor-lang = "0.24.2"
+anchor-spl = "0.24.2"
 shank = "0.0.2"
 borsh = "0.9.3"
 thiserror = "~1.0"
 num-derive = "0.3.3"
 num-traits = "~0.2"
 
-
-[features]
-test-bpf = []
-
 [dev-dependencies]
-assert_matches = "1.5.0"
-solana-program-test = "=1.10.9"
-solana-sdk = "=1.10.9"
-solana-validator = "=1.10.9"
-solana-logger = "=1.10.9"
-
-[lib]
-crate-type = ["cdylib", "lib"]
+#assert_matches = "1.5.0"
+#solana-program-test = "1.9.14"
+#solana-sdk = "1.9.14"
+#solana-validator = "1.9.14"
+#solana-logger = "1.9.14"
